correct card button link

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                       A to-do list using HTML, CSS, JavaScript with light & dark
                       theme.
                     </p>
-                    <a href="./todoList/index.html"
+                    <a href="./tree/main/todoList/"
                       ><button class="light card-button">Demo</button></a
                     >
-                    <a href="./tree/main/projects/todoList"
+                    <a href="/tree/main/projects/todoList"
                       ><button class="light card-button">Code</button></a
                     >
                   </div>
