delete tree/main from link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       A to-do list using HTML, CSS, JavaScript with light & dark
                       theme.
                     </p>
-                    <a href="./tree/main/todoList/"
+                    <a href="projects/todoList/index.html"
                       ><button class="light card-button">Demo</button></a
                     >
                     <a href="/tree/main/projects/todoList"
