link href update

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row margin-bottom-small">
               <div class="col-md-4">
                 <div class="card">
-                  <img src="./img/todo_list.jpg" />
+                  <img src="img/todo_list.jpg" />
                   <div class="card-bottom">
                     <h3 class="card-title">To-do List</h3>
                     <p>
@@ -63,7 +63,7 @@
                     <a href="projects/todoList/index.html"
                       ><button class="light card-button">Demo</button></a
                     >
-                    <a href="/tree/main/projects/todoList"
+                    <a href="/blob/main/projects/todoList"
                       ><button class="light card-button">Code</button></a
                     >
                   </div>
@@ -71,11 +71,11 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="./img/singlePriceGridComponent.jpg" />
+                  <img src="img/singlePriceGridComponent.jpg" />
                   <div class="card-bottom">
                     <h3 class="card-title">Single Price Grid Component</h3>
                     <p>A single price grid component using HTML, CSS.</p>
-                    <a href="./projects/singlePriceGridComponent/"
+                    <a href="projects/singlePriceGridComponent/index.html"
                       ><button class="light card-button">Demo</button></a
                     >
                     <a href="./tree/main/projects/todoList"
@@ -86,11 +86,11 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="./img/huddleLandingPage.jpg" />
+                  <img src="img/huddleLandingPage.jpg" />
                   <div class="card-bottom">
                     <h3 class="card-title">Huddle Landing Page</h3>
                     <p>Huddle landing page using HTML, CSS.</p>
-                    <a href="./projects/huddleLandingPage/"
+                    <a href="projects/huddleLandingPage/"
                       ><button class="light card-button">Demo</button></a
                     >
                     <a href="./tree/main/projects/huddleLandingPage"
