added box shadow to cards

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
                       A to-do list using HTML, CSS, JavaScript with light & dark
                       theme.
                     </p>
-                    <a href="projects/todoList/index.html"
+                    <a href="projects/todoList/" target="_blank"
                       ><button class="light card-button">Demo</button></a
                     >
-                    <a href="/blob/main/projects/todoList"
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/todoList"
+                      target="_blank"
                       ><button class="light card-button">Code</button></a
                     >
                   </div>
@@ -75,10 +77,12 @@
                   <div class="card-bottom">
                     <h3 class="card-title">Single Price Grid Component</h3>
                     <p>A single price grid component using HTML, CSS.</p>
-                    <a href="projects/singlePriceGridComponent/index.html"
+                    <a href="projects/singlePriceGridComponent/" target="_blank"
                       ><button class="light card-button">Demo</button></a
                     >
-                    <a href="./tree/main/projects/todoList"
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/singlePriceGridComponent"
+                      target="_blank"
                       ><button class="light card-button">Code</button></a
                     >
                   </div>
@@ -90,10 +94,12 @@
                   <div class="card-bottom">
                     <h3 class="card-title">Huddle Landing Page</h3>
                     <p>Huddle landing page using HTML, CSS.</p>
-                    <a href="projects/huddleLandingPage/"
+                    <a href="projects/huddleLandingPage/" target="_blank"
                       ><button class="light card-button">Demo</button></a
                     >
-                    <a href="./tree/main/projects/huddleLandingPage"
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/huddleLandingPage"
+                      target="_blank"
                       ><button class="light card-button">Code</button></a
                     >
                   </div>
