added all the projects

--- a/index.html
+++ b/index.html
@@ -106,7 +106,106 @@
                 </div>
               </div>
             </div>
-            <div class="row margin-bottom-small"></div>
+            <div class="row margin-bottom-small">
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="img/fyloLandingPage.jpg" />
+                  <div class="card-bottom">
+                    <h3 class="card-title">Fylo Landing Page</h3>
+                    <p>Fylo landing page using HTML, CSS.</p>
+                    <a href="projects/fyloLandingPage/" target="_blank"
+                      ><button class="light card-button">Demo</button></a
+                    >
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/fyloLandingPage"
+                      target="_blank"
+                      ><button class="light card-button">Code</button></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="img/fyloDataStorageComponent.jpg" />
+                  <div class="card-bottom">
+                    <h3 class="card-title">Fylo Data Storage Component</h3>
+                    <p>Fylo data storage component using HTML, CSS.</p>
+                    <a href="projects/fyloDataStorageComponent/" target="_blank"
+                      ><button class="light card-button">Demo</button></a
+                    >
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/fyloDataStorageComponent"
+                      target="_blank"
+                      ><button class="light card-button">Code</button></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="img/fourCards.jpg" />
+                  <div class="card-bottom">
+                    <h3 class="card-title">Four Cards</h3>
+                    <p>Four cards component using HTML, CSS.</p>
+                    <a href="projects/fourCards/" target="_blank"
+                      ><button class="light card-button">Demo</button></a
+                    >
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/fourCards"
+                      target="_blank"
+                      ><button class="light card-button">Code</button></a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row margin-bottom-small">
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="img/codingBootcampTestimonialSlider.jpg" />
+                  <div class="card-bottom">
+                    <h3 class="card-title">
+                      Coding Bootcamp Testimonial Slider
+                    </h3>
+                    <p>
+                      Coding bootcamp testimonial slider using HTML, CSS,
+                      JavaScript.
+                    </p>
+                    <a
+                      href="projects/codingBootcampTestimonialsSlider/"
+                      target="_blank"
+                      ><button class="light card-button">Demo</button></a
+                    >
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/codingBootcampTestimonialsSlider"
+                      target="_blank"
+                      ><button class="light card-button">Code</button></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="img/baseApparelComingSoon.jpg" />
+                  <div class="card-bottom">
+                    <h3 class="card-title">Base Apparel Coming Soon</h3>
+                    <p>
+                      Base Apparel coming soon page using HTML, CSS &
+                      JavaScript.
+                    </p>
+                    <a href="projects/baseApparelComingSoon/" target="_blank"
+                      ><button class="light card-button">Demo</button></a
+                    >
+                    <a
+                      href="https://github.com/NasratTalash/frontendMentorSolutions/tree/main/projects/baseApparelComingSoon"
+                      target="_blank"
+                      ><button class="light card-button">Code</button></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- one card -->
+            </div>
           </div>
         </section>
       </main>
