--- a/projects/fyloLandingPage/index.html
+++ b/projects/fyloLandingPage/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
     <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
     <!-- linking the google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
-      rel="stylesheet" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Linking the font awesome library -->
-    <script src="https://kit.fontawesome.com/3ca475532a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3ca475532a.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Link the style sheet -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-
-
     <header>
       <div class="container">
         <div class="logo">
@@ -41,10 +47,8 @@
       </div>
     </header>
 
-
     <section class="showcase">
       <div class="container">
-
         <div class="info">
           <h1>All your files in one secure location, accessible anywhere.</h1>
           <p>
@@ -53,19 +57,20 @@
             and co-workers.
           </p>
           <form>
-            <input type="email" name="email" placeholder="Enter your email..." />
+            <input
+              type="email"
+              name="email"
+              placeholder="Enter your email..."
+            />
             <button class="btn">Get Started</button>
           </form>
         </div>
 
-
         <div class="illustration">
           <img src="images/illustration-1.svg" alt="illustration" />
         </div>
-
       </div>
     </section>
-
 
     <section class="features">
       <div class="container">
@@ -79,8 +84,12 @@
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required!
           </p>
-          <a href="#" class="workLink">See how Fylo works&nbsp;<i class="fa fa-arrow-circle-right"
-              aria-hidden="true"></i></a>
+          <a href="#" class="workLink"
+            >See how Fylo works&nbsp;<i
+              class="fa fa-arrow-circle-right"
+              aria-hidden="true"
+            ></i
+          ></a>
 
           <div class="quoteCard">
             <i class="fa fa-quote-left quoteMark" aria-hidden="true"></i>
@@ -89,13 +98,15 @@
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </blockquote>
-            <img src="images/avatar-testimonial.jpg" alt="founder of huddle photo" />
+            <img
+              src="images/avatar-testimonial.jpg"
+              alt="founder of huddle photo"
+            />
             <span class="name">
               <strong>Kyle Burton</strong><br />Founder & CEO, Huddle
             </span>
           </div>
         </div>
-
 
         <div class="illustration">
           <img src="images/illustration-2.svg" alt="illustration" />
@@ -121,14 +132,17 @@
       </div>
     </section>
 
-
     <footer>
       <img src="images/logoWhite.svg" alt="Company Logo" />
 
       <div class="ftrContainer">
         <div class="contactInfo">
-          <p><i class="fa fa-phone" aria-hidden="true"></i>Phone: +1-543-123-4567</p>
-          <p><i class="fa fa-envelope-o" aria-hidden="true"></i>example@fylo.com</p>
+          <p>
+            <i class="fa fa-phone" aria-hidden="true"></i>Phone: +1-543-123-4567
+          </p>
+          <p>
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>example@fylo.com
+          </p>
         </div>
 
         <div class="services">
@@ -153,15 +167,16 @@
         </div>
       </div>
 
-
       <p class="attribution">
         Challenge by:
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> -- Coded by:
-        <a href="https://github.com/NasratTalash" target="_blank">Nasratullah Talash</a>
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        -- Coded by:
+        <a href="https://github.com/nasratt" target="_blank"
+          >Nasratullah Talash</a
+        >
       </p>
-
-
     </footer>
   </body>
-
 </html>
