--- a/projects/huddleLandingPage/index.html
+++ b/projects/huddleLandingPage/index.html
@@ -60,8 +60,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by
-        <a href="https://github.com/NasratTalash">Nasratullah Talash</a>.
+        >. Coded by <a href="https://github.com/nasratt">Nasratullah Talash</a>.
       </p>
       <div class="social">
         <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
